# initial

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.in  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: EstructuraBDReducidaAbcdin.txt  estructuraMongoExmax.txt  estructuraMongoExmaxReducida.json  estructuraMongoExmaxReducidaItems.txt  promptBase.txt
data/BDIntelia_V1/: estructuraBDIntelia_V1.json  promptBDInteliaV1.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scripts/BDIntelia_V1/: 01-creates.sql  02-inserts-maestros.sql  03-inserts-genericos.sql  04-inserts-orders.sql
scripts/BDintelia_V2_posgresql/: 01-create.sql  01-delta_create.sql  02-delta_create.sql  02-insert-config.sql  03-delta_create-06102024.sql  03-delta_create-29092024.sql  03-delta_create.sql  04-insert-trx.sql  05-insert-trx-29092024.sql  06-insert-trx-06102024.sql  consultasChatGPT.sql  estructuraYdatos.sql  promptBDInteliaV2.txt
src/initial/: __init__.py  cli.py  initial.py
src/initial/api/v1/: controllers.py
src/initial/config/: settings.py
src/initial/domain/: services.py
src/initial/infrastructure/external_services/: chatgpt_api_client.py
src/initial/util/: TokenManagement.py
tests/: __init__.py  test_initial.py
