[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "initial"
version = "0.1.0"
description = "Is a first develop about the product"
readme = "README.rst"
authors = [
  {name = "cd initial_phase", email = "nataliagomezpetrizan@gmail.com"}
]
maintainers = [
  {name = "cd initial_phase", email = "nataliagomezpetrizan@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/negp2022/initial/issues"
changelog = "https://github.com/negp2022/initial/blob/master/changelog.md"
homepage = "https://github.com/negp2022/initial"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

